# serializer version: 1
# name: test_available_update_can_be_installed[update.mock_title_fritz_os-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mock_title_fritz_os',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'FRITZ!OS',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'FRITZ!OS',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '1CED6F123411-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_available_update_can_be_installed[update.mock_title_fritz_os-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/fritz/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Title FRITZ!OS',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.29',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.50',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'http://download.avm.de/fritzbox/fritzbox-7530-ax/deutschland/fritz.os/info_de.txt',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'FRITZ!OS',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mock_title_fritz_os',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_available[update.mock_title_fritz_os-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mock_title_fritz_os',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'FRITZ!OS',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'FRITZ!OS',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '1CED6F123411-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_available[update.mock_title_fritz_os-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/fritz/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Title FRITZ!OS',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.29',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.50',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'http://download.avm.de/fritzbox/fritzbox-7530-ax/deutschland/fritz.os/info_de.txt',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'FRITZ!OS',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mock_title_fritz_os',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entities_initialized[update.mock_title_fritz_os-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mock_title_fritz_os',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'FRITZ!OS',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'FRITZ!OS',
    'platform': 'fritz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '1CED6F123411-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities_initialized[update.mock_title_fritz_os-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/fritz/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Title FRITZ!OS',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.29',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.29',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'FRITZ!OS',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mock_title_fritz_os',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
